RESOLVED FIXED308089
CNN livestream stuck loading
https://bugs.webkit.org/show_bug.cgi?id=308089
Summary CNN livestream stuck loading
Jean-Yves Avenard [:jya]
Reported 2026-02-17 16:18:36 PST
Steps to reproduce 1. Go to CNN.com 2. Click on `Watch` 3. Login with either CNN account or with TV provider 4. Play Video Expected results Livestream should play after logging Actual results Livestream is stuck loading Regression range was found to be: https://commits.webkit.org/compare/307242@main...307240@main rdar://170517249
Attachments
Jean-Yves Avenard [:jya]
Comment 1 2026-02-17 18:27:09 PST
EWS
Comment 2 2026-02-18 02:52:19 PST
Committed 307752@main (b2e3a90d9c8d): <https://commits.webkit.org/307752@main> Reviewed commits have been landed. Closing PR #58893 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.