CNN livestream stuck loading https://bugs.webkit.org/show_bug.cgi?id=308089 rdar://170517249

Reviewed by Youenn Fablet.

The encryption keys attached to an audio CMSampleBuffer were lost during the CP->GPUP serialisation.
This preventing the audio stream from being successfully decoded.
While the `sinf` box was correctly attached to the CMSampleBuffer's extensions
the `CommonEncryptionTrackEncryptionBox` was only attached for video samples.

We amend createFormatDescriptionFromTrackInfo so that it handles both audio and video
content in the same way.

Amend existing test which was incorrectly succeeding.

* LayoutTests/http/tests/media/fairplay/fps-mse-unmuxed-audio-only-expected.txt:
* LayoutTests/http/tests/media/fairplay/fps-mse-unmuxed-audio-only.html:
* Source/WebCore/platform/graphics/cocoa/CMUtilities.mm:
(WebCore::createExtensionsDictionary):
(WebCore::createAudioFormatDescription):
(WebCore::createFormatDescriptionFromTrackInfo):

Canonical link: https://commits.webkit.org/307752@main